Change package to ca.spottedleaf.concurrentutil.*
Add License, we're MIT

Add more POM info

Add HashPrimeUtil (going to be looking into using prime numbers for
hash table implementations)
Start to investigate use of @Contended
Add better hashing algorithms for int/long and document some methods
in IntegerUtil
IntegerUtil will remain without javadocs for the indefinite future since
those are not supposed to be a part of this library